src/test/deca/context/invalid/selection_invalid.deca
class B{
protected int x;
}
{
B b=new B();
int y= b.x;
}